仿探探滑动卡片

--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -12,6 +12,12 @@
   display: flex;
 }
 
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .align-center {
   align-items: center;
 }
