添加底部导航栏

--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -1,5 +1,11 @@
 @import './base.scss';
 
+html, body {
+  padding: 0px;
+  margin: 0px;
+  overflow: hidden;
+}
+
 .tabbar-theme {
   background: #F63515;
 }
