--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -4,5 +4,15 @@
   box-sizing: border-box;
 }
 
+// 清除谷歌浏览器下的 search 叉号
+input::-webkit-search-cancel-button{
+  display: none;
+}
+
+// 清除IE下的 search 叉号
+input[type=search]::-ms-clear{
+  display: none;
+}
+
 // 变量
 $footerHeight: 75px;
