--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 // 清除谷歌浏览器下的 search 叉号
 input::-webkit-search-cancel-button{
   display: none;
@@ -14,5 +8,21 @@ input[type=search]::-ms-clear{
   display: none;
 }
 
-// 变量
-$footerHeight: 75px;
+
+body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, li, a, p, h1, h2, h3, h4,h5, h6, i, b, textarea, button, input, select, figure, figcaption, {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-style: normal;
+  text-decoration: none;
+  border: none;
+  color: #333;
+  font-weight: normal;
+  font-family: "Microsoft Yahei";
+  box-sizing: border-box;
+  -webkit-tap-highlight-color:transparent;
+  -webkit-font-smoothing: antialiased;
+  &:hover{
+    outline: none;
+  }
+}
