--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -1,23 +1,5 @@
 @import './base.scss';
 
-body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, li, a, p, h1, h2, h3, h4,h5, h6, i, b, textarea, button, input, select, figure, figcaption, {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  font-style: normal;
-  text-decoration: none;
-  border: none;
-  color: #333;
-  font-weight: normal;
-  font-family: "Microsoft Yahei";
-  box-sizing: border-box;
-  -webkit-tap-highlight-color:transparent;
-  -webkit-font-smoothing: antialiased;
-  &:hover{
-    outline: none;
-  }
-}
-
 img {
   user-select: none;
 }
@@ -42,4 +24,26 @@ img {
 
 .justify-center {
   justify-content: center;
+}
+
+.floor {
+  font-size: 0;
+  width: 100%;
+}
+
+.floor-item {
+  width: 100%;
+  overflow: hidden;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
