修改首页滚动

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -32,3 +32,12 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
   height: 0;
   clear: both;
 }
+
+
+@mixin h5 {
+  font-size: 28px;
+}
+
+@mixin h6 {
+  font-size: 24px;
+}
