--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -1,5 +1,4 @@
 @import './base.scss';
-
 img {
   user-select: none;
 }
@@ -10,6 +9,25 @@ img {
 
 .flex-row {
   display: flex;
+}
+
+.fit {
+  width: 100%;
+  height: 100%;
+}
+
+.flex-1 {
+  flex: 1
+}
+
+.jd-red {
+  color: #f23030;
+}
+
+.ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .column {
