--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -33,6 +33,9 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
   clear: both;
 }
 
+@mixin h4 {
+  font-size: 32px;
+}
 
 @mixin h5 {
   font-size: 28px;
